# zink-mesa

./: .gitignore  .gitignore.rej  232-patch.diff  ios-aarch64  meson.build  vulkan_ios.pc
.github/workflows/: android.yml  ios.yml
ext/: libMoltenVK.tbd
include/GL/: osmesa.h
src/android_stub/: meson.build
src/gallium/auxiliary/target-helpers/: inline_sw_helper.h
src/gallium/drivers/zink/: zink_device_info.py  zink_instance.py  zink_kopper.c  zink_kopper.h  zink_screen.c
src/gallium/frontends/dri/: meson.build
src/gallium/frontends/osmesa/: meson.build  osmesa_bufferless.c
src/gallium/targets/dri/: target.c
src/gallium/targets/osmesa/: meson.build  osmesa.sym
src/gallium/winsys/sw/dri/: dri_sw_winsys.c
src/gallium/winsys/virgl/drm/: meson.build
src/glx/: meson.build
